test(batch): refactor BatchRegistrationServiceTest methods